sandbox/libc/unistd/unistd.pas


function chroot(__path:Pchar):longint;cdecl;external libc;
{ Prompt with PROMPT and read a string from the terminal without echoing.
   Uses /dev/tty if possible; otherwise stderr and stdin.   }
function getpass(__prompt:Pchar):Pchar;cdecl;external libc;
{$endif}
{ Use misc || X/Open.   }
{ Make all changes done to FD actually appear on disk.

   This function is a cancellation point and therefore not marked with
   .   }

function fsync(__fd:longint):longint;cdecl;external libc;
{$ifdef __USE_GNU}
{ Make all changes done to all files on the file system associated
   with FD actually appear on disk.   }
function syncfs(__fd:longint):longint;cdecl;external libc;
{$endif}
{$if defined __USE_MISC || defined __USE_XOPEN_EXTENDED}
{ Return identifier for the current host.   }

function gethostid:longint;cdecl;external libc;
{ Make all changes done to all files actually appear on disk.   }
procedure sync;cdecl;external libc;
{$if defined __USE_MISC || !defined __USE_XOPEN2K}
{ Return the number of bytes in a page.  This is the system's page size,
   which is not necessarily the same as the hardware page size.   }

function getpagesize:longint;cdecl;external libc;
{ Return the maximum number of file descriptors
   the current process could possibly have.   }
function getdtablesize:longint;cdecl;external libc;
{$endif}
{$endif}
{ Use misc || X/Open Unix.   }
{$if defined __USE_XOPEN_EXTENDED || defined __USE_XOPEN2K8}
{ Truncate FILE to LENGTH bytes.   }
{$ifndef __USE_FILE_OFFSET64}

function truncate(__file:Pchar; __length:Toff_t):longint;cdecl;external libc;
{$else}
{$ifdef __REDIRECT_NTH}

function truncate(__file:Pchar; __length:Toff64_t):longint;cdecl;external libc;
{$else}

const
  truncate = truncate64;  
{$endif}
{$endif}
{$ifdef __USE_LARGEFILE64}

function truncate64(__file:Pchar; __length:Toff64_t):longint;cdecl;external libc;
{$endif}
{$endif}
{ Use X/Open Unix || POSIX 2008.   }
{ Truncate the file FD is open on to LENGTH bytes.   }
{$ifndef __USE_FILE_OFFSET64}

function ftruncate(__fd:longint; __length:Toff_t):longint;cdecl;external libc;
{$else}
{$ifdef __REDIRECT_NTH}

function ftruncate(__fd:longint; __length:Toff64_t):longint;cdecl;external libc;
{$else}

const
  ftruncate = ftruncate64;  
{$endif}
{$endif}
{$ifdef __USE_LARGEFILE64}

function ftruncate64(__fd:longint; __length:Toff64_t):longint;cdecl;external libc;
{$endif}
{ Use POSIX.1b || X/Open Unix || XPG6.   }
{ Set the end of accessible data space (aka "the break") to ADDR.
   Returns zero on success and -1 for errors (with errno set).   }

function brk(__addr:pointer):longint;cdecl;external libc;
{ Increase or decrease the end of accessible data space by DELTA bytes.
   If successful, returns the address the previous end of data space
   (i.e. the beginning of the new space, if DELTA > 0);
   returns (void *) -1 for errors (with errno set).   }
function sbrk(__delta:Tintptr_t):pointer;cdecl;external libc;
{$ifdef __USE_MISC}
{ Invoke `system call' number SYSNO, passing it the remaining arguments.
   This is completely system-dependent, and not often useful.

   In Unix, `syscall' sets `errno' for all errors and most calls return -1
   for errors; in many systems you cannot pass arguments or get return
   values for all system calls (`pipe', `fork', and `getppid' typically
   among them).

   In Mach, all system calls take normal arguments and always return an
   error code (zero for success).   }
function syscall(__sysno:longint; args:array of const):longint;cdecl;external libc;
function syscall(__sysno:longint):longint;cdecl;external libc;
{$endif}
{ Use misc.   }
{$if (defined __USE_MISC || defined __USE_XOPEN_EXTENDED) && !defined F_LOCK}
{ NOTE: These declarations also appear in <fcntl.h>; be sure to keep both
   files consistent.  Some systems have them there and some here, and some
   software depends on the macros being defined without including both.   }
{ `lockf' is a simpler interface to the locking facilities of `fcntl'.
   LEN is always relative to the current file position.
   The CMD argument is one of the following.

   This function is a cancellation point and therefore not marked with
   .   }
{ Unlock a previously locked region.   }

const
  F_ULOCK = 0;  
{ Lock a region for exclusive use.   }
  F_LOCK = 1;  
{ Test and lock a region for exclusive use.   }
  F_TLOCK = 2;  
{ Test a region for other processes locks.   }
  F_TEST = 3;  
{$ifndef __USE_FILE_OFFSET64}

function lockf(__fd:longint; __cmd:longint; __len:Toff_t):longint;cdecl;external libc;
{$else}
{$ifdef __REDIRECT}

function lockf(__fd:longint; __cmd:longint; __len:Toff64_t):longint;cdecl;external libc;
{$else}

const
  lockf = lockf64;  
{$endif}
{$endif}
{$ifdef __USE_LARGEFILE64}

function lockf64(__fd:longint; __cmd:longint; __len:Toff64_t):longint;cdecl;external libc;
{$endif}
{$endif}
{ Use misc and F_LOCK not already defined.   }
{$ifdef __USE_GNU}
{ Evaluate EXPRESSION, and repeat as long as it returns -1 with `errno'
   set to EINTR.   }
{ Copy LENGTH bytes from INFD to OUTFD.   }

function copy_file_range(__infd:longint; __pinoff:Poff64_t; __outfd:longint; __poutoff:Poff64_t; __length:Tsize_t; 
           __flags:dword):Tssize_t;cdecl;external libc;
{$endif}
{ __USE_GNU  }
{$if defined __USE_POSIX199309 || defined __USE_UNIX98}
{ Synchronize at least the data part of a file with the underlying
   media.   }

function fdatasync(__fildes:longint):longint;cdecl;external libc;
{$endif}
{ Use POSIX199309  }
{$ifdef __USE_MISC}
{ One-way hash PHRASE, returning a string suitable for storage in the
   user database.  SALT selects the one-way function to use, and
   ensures that no two users' hashes are the same, even if they use
   the same passphrase.  The return value points to static storage
   which will be overwritten by the next call to crypt.

   This declaration is deprecated; applications should include
   <crypt.h> instead.   }

function crypt(__key:Pchar; __salt:Pchar):Pchar;cdecl;external libc;
{$endif}
{$ifdef __USE_XOPEN}
{ Swab pairs bytes in the first N bytes of the area pointed to by
   FROM and copy the result to TO.  The value of TO must not be in the
   range [FROM - N + 1, FROM - 1].  If N is odd the first byte in FROM
   is without partner.   }

procedure swab(__from:pointer; __to:pointer; __n:Tssize_t);cdecl;external libc;
{$endif}
{ Prior to Issue 6, the Single Unix Specification required these
   prototypes to appear in this header.  They are also found in
   <stdio.h>.   }
{$if defined __USE_XOPEN && !defined __USE_XOPEN2K}
{ Return the name of the controlling terminal.   }

function ctermid(__s:Pchar):Pchar;cdecl;external libc;
{ Return the name of the current user.   }
function cuserid(__s:Pchar):Pchar;cdecl;external libc;
{$endif}
{ Unix98 requires this function to be declared here.  In other
   standards it is in <pthread.h>.   }
{$if defined __USE_UNIX98 && !defined __USE_XOPEN2K}

function pthread_atfork(__prepare:procedure ; __parent:procedure ; __child:procedure ):longint;cdecl;external libc;
{$endif}
{$ifdef __USE_MISC}
{ Write LENGTH bytes of randomness starting at BUFFER.  Return 0 on
   success or -1 on error.   }

function getentropy(__buffer:pointer; __length:Tsize_t):longint;cdecl;external libc;
{$endif}
{$ifdef __USE_GNU}
{ Close all file descriptors in the range FD up to MAX_FD.  The flag FLAGS
   are define by the CLOSE_RANGE prefix.  This function behaves like close
   on the range and gaps where the file descriptor is invalid or errors
   encountered while closing file descriptors are ignored.   Returns 0 on
   successor or -1 for failure (and sets errno accordingly).   }

function close_range(__fd:dword; __max_fd:dword; __flags:longint):longint;cdecl;external libc;
{$endif}
{ Define some macros helping to catch buffer overflows.   }
{$if __USE_FORTIFY_LEVEL > 0 && defined __fortify_function}
{$include <bits/unistd.h>}
{$endif}
{ System-specific extensions.   }
{$include <bits/unistd_ext.h>}
{$endif}
{ unistd.h   }

// === Konventiert am: 1-7-25 17:34:43 ===


implementation



end.
